--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -7,9 +7,9 @@ name: Flutter
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
@@ -22,10 +22,11 @@ jobs:
       # You can specify other versions if desired, see documentation here:
       # https://github.com/dart-lang/setup-dart/blob/main/README.md
       # - uses: dart-lang/setup-dart@v1
-      - uses: geowatson/flutter-latest@1.0.1
 
       - name: Install dependencies
-        run: flutter pub get
+        uses: geowatson/flutter-latest@1.0.0
+        with:
+          args: pub get
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
@@ -37,4 +38,6 @@ jobs:
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run publish
-        run: flutter build apk
+        uses: geowatson/flutter-latest@1.0.0
+        with:
+          args: build apk
