feat : add some basics golden test

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -39,7 +39,7 @@ jobs:
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
-      - name: Run publish
+      - name: Run test
         uses: geowatson/flutter-latest@1.0.0
         with:
-          args: build apk
+          args: test
